adding support for Liferay 7.4 ga125 and upgrading java support to 21